# gammo-agx

./: .env.example  .gitignore  GAMMO_AGX_HANDOFF.md  README.md  fix_encoding.py  requirements.txt  start.bat  test_out.txt
ai/: __init__.py  reasoning_pipeline.py
analysis/: predictions.py  validator.py
api/: __init__.py  main.py  state.py
app/: package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
config/: __init__.py  model_config.py  physics_config.py  settings.py  supabase_config.py
core/: __init__.py
datasets/: __init__.py  arxiv_pipeline.py  corpus_cleaner.py  huggingface_loader.py  simulation_exporter.py  synthetic_generator.py
docs/: api_reference.md  architecture.md  contributing.md  physics.md  setup_guide.md
graph/: __init__.py  gnn_model.py  pattern_recognition.py  spacetime_graph.py
loop/: __init__.py  discovery_loop.py  loop_config.py  loop_daemon.py  step_handlers.py
qesp/: integration.py  qesp_simulator.py  quantum_feedback.py  strain.py
scripts/: benchmark.py  download_datasets.py  export_dataset.py  run_api.py  run_loop.py  setup_supabase.py  test_new_solvers.py  test_new_solvers_fast.py
store/: __init__.py  export.py  query.py  realtime.py  schema.py  search.py  supabase_client.py  writer.py
tests/: __init__.py  test_api.py  test_casimir.py  test_hypothesis.py  test_loop.py  test_qesp.py  test_qesp_feedback.py  test_qesp_simulator.py  test_qesp_strain.py  test_simulator.py  test_store.py  test_symbolic.py
visualizer/: __init__.py  gammo_agx_dashboard.html  gammo_agx_v2_visualizer.html  (+4 more)
(+64 files in other folders)
