[package]
name = "gammo-agx"
version = "0.1.0"
description = "Gammo AGX — Autonomous Hybrid Research Engine for Exotic Spacetime Physics"
authors = ["Gammo AGX"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
